fixes h1 not being centered on smaller widths

--- a/themes/navhub-v2/static/css/sass/homepage/get_started.scss
+++ b/themes/navhub-v2/static/css/sass/homepage/get_started.scss
@@ -26,8 +26,12 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+  }
+  h1, h2 {
+
     @media (max-width: 870px ) {
       max-width: 600px;
+      text-align: center;
     }
   }
   .grid-container {
